<resources>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_image_from_gallery">Choose image from gallery</string>
    <string name="take_a_video">Take a video</string>
    <string name="choose_video_from_gallery">Choose video from gallery</string>
    <string name="permission_camera_rationale">Camera and storage permission is required for photos and video.</string>
    <string name="permission_contact_rationale">Contact permission is required for read contact.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>