<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_camera_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/_5sdp"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/_5sdp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".bottomsheet.AndroidFilePicker">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_minus5sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/take_a_photo"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChooseImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/choose_image_from_gallery"
            android:textColor="@color/black"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTakeVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/take_a_video"
            android:textColor="@color/black"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChooseVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/choose_video_from_gallery"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="true" />
    </LinearLayout>
</LinearLayout>
